--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -57,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Tutar"
+            android:inputType="number"
             android:singleLine="true"/>
     </com.google.android.material.textfield.TextInputLayout>
 
